* added bcdui.bcdAlerter (.info/.warn/.error) to show a slide in alert
* autogrow attribute for textarea widget
* Firefox v137.0.2 stopped supporting xslt document() function, extended our implementation to firefox
* SideBySideChooser uses i18n tokens for source and target caption translations
.Security:
.Development:
.Bugfixes:
* WrsNextIdentifierServlet: fix counter creation with blockSize>1

.Incompatibilities:
* In SQLEngine::transform '-' postfix needs to be converted to '\_' to omit table alias like `INSERT INTO $t.painTableName ($t.colName_) VALUES (1)`
* Removal of Internet Explorer support
* javax to jakarta switch (for several packages e.g. javax.servlet)
* new 3rd party jars set
* cookies created are flagged as "secure", requiring https
* add BindingInfo servlet to web.xml
* OAuth2 configuration in shiro.ini:
** OAuthAuthenticatingFilter properties renamed: authScope to scope, redirectUrl to redirectUri, apiEndpoint to userInfoEndpoint
** `redirectUri` became optional, and this value is then derived from Servlet context at runtime instead, supporting virtual hosts
** `userInfoEndpoint` became optional, the user-id is then derived directly from the id-token send from the token endpoint. The call to user info endpoint is then skipped.
** oAuth now requires a popup for the login window, this looks more consistent and allows for cookie SameSite=strict setting
** OAuth Realms now need to create the session on successful login and cannot rely on JdbcRealm doing that anymore
* wrq filter operator like automatically escapes %, _ and \ now. Don't use local workarounds where you add \ yourself.
* `bcdui.config.userName` now holds the value from bcdui_sec_user.name not user_login anymore
* `bcdui.browserCompatibility.isXYZ` for various browser detections updated. Removed `isIE`, `isMsEdge`, `isIE8`. `isChromiumEdge` became `isEdge`
* Remove msxsl namespace from preset namespaces