@@ -31,6 +31,7 @@ ___
 .Development:
 .Bugfixes:
 * WrsNextIdentifierServlet: fix counter creation with blockSize>1
+* internal logging is now compatible with Log4j2 async logging (also with disruptor based method for high throughput logging)
 
 .Incompatibilities:
 * In SQLEngine::transform '-' postfix needs to be converted to '\_' to omit table alias like `INSERT INTO $t.painTableName ($t.colName_) VALUES (1)`
